--- a/Assets/Scripts/UI/UI.asmdef
+++ b/Assets/Scripts/UI/UI.asmdef
@@ -7,6 +7,9 @@
         "Combat",
         "Map",
         "Run",
+        "Events",
+        "Reward",
+        "Shop",
         "Utility",
         "Unity.TextMeshPro"
     ],
