--- a/Assets/Scripts/Map/Map.asmdef
+++ b/Assets/Scripts/Map/Map.asmdef
@@ -3,6 +3,7 @@
     "rootNamespace": "ProjectSS.Map",
     "references": [
         "Core",
+        "Run",
         "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
