--- a/Assets/Scripts/Run/Run.asmdef
+++ b/Assets/Scripts/Run/Run.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "ProjectSS.Run",
     "references": [
         "Core",
-        "Data"
+        "Data",
+        "Services"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
